--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
 .App {
-  text-align: center;
+  background-color: #fafafa;
+  height: auto;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-header {
+  margin-bottom: 20px;
+  padding: 10px 0;
+  background-color: #fff;
+  border-bottom: 1px solid lightgray;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+.img-container {
+  object-fit: contain;
+  padding-left: 25%;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.login__signup__btn {
+  padding-right: 25%;
+  font-size: 17px;
+  font-weight: 700;
+  cursor: pointer;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content__section {
+  padding: 90px 25% 150px;
+  height: 100%;
+}
+
+.post__container {
+  height: 100%;
+}
+
+.add__post__btn__container {
+  position: fixed;
+  right: 40px;
+  bottom: 40px;
+}
+
+.add__post__btn {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  background-color: #fafafa !important;
+}
+
+.posts__zero__level {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
